# duckdb-psql

./: .gitmodules  CMakeLists.txt  Makefile  README.md  extension_config.cmake
.github/workflows/: Linux.yml  MacOS.yml  MainDistributionPipeline.yml  Wasm.yml  Windows.yml  _extension_deploy.yml
src/: psql_extension.cpp
src/include/: psql_extension.hpp
test/sql/: psql.test
